--- a/client/src/App.css
+++ b/client/src/App.css
@@ -5,6 +5,14 @@
   text-align: center;
 }
 
+/* スマホ向け（幅768px以下） */
+@media (max-width: 768px) {
+  #root {
+    padding: 0;
+  }
+}
+
+
 .logo {
   height: 6em;
   padding: 1.5em;
